Fix display on mobile by adding media container

--- a/styles/sectionFilter.css
+++ b/styles/sectionFilter.css
@@ -1,5 +1,15 @@
-.page_search .section {   
-    float: right;
-    width: 50%;
-    margin-top: 1.43rem;
+@media (max-width: 768px) {
+    .page_search .section {
+        float: left;
+        width: 100%;
+        margin-top: 1.43rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .page_search .section {
+        float: right;
+        width: 50%;
+        margin-top: 1.43rem;
+    }
 }
